<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <com.wtcdeveloper.remotecontrolleryantra.JoystickView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/joyStickView"
        android:layout_alignBottom="@+id/radioSpeedSelector" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/angleTextView"

        android:textSize="3pt"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/joyStickView"
        android:layout_toEndOf="@+id/joyStickView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/powerTextView"

        android:textSize="3pt"
        android:layout_below="@+id/angleTextView"
        android:layout_toRightOf="@+id/joyStickView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/directionTextView"

        android:textSize="3pt"
        android:layout_below="@+id/powerTextView"
        android:layout_toRightOf="@+id/joyStickView" />









    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Drop Package"
        android:id="@+id/btnPackage"
        android:layout_below="@+id/directionTextView"
        android:layout_toRightOf="@+id/joyStickView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HardBreak"
        android:id="@+id/btnBrake"
        android:layout_below="@+id/btnPackage"
        android:layout_toRightOf="@+id/joyStickView" />
    <ToggleButton
        android:id="@+id/tgBtnAutoManu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/toggle_turn_automatic"
        android:textOff="@string/toggle_turn_manual"
        android:checked="true"
        android:layout_below="@+id/btnBrake"
        android:layout_toRightOf="@+id/joyStickView" />
    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/etDirections"
        android:layout_below="@+id/tgBtnAutoManu"
        android:layout_toRightOf="@+id/joyStickView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Send"
        android:id="@+id/btnSendDirection"
        android:layout_below="@+id/etDirections"
        android:layout_toRightOf="@+id/joyStickView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SPEED"
        android:id="@+id/textView"

        android:textSize="5pt"
        android:layout_below="@+id/btnSendDirection"
        android:layout_toRightOf="@+id/joyStickView" />
    <RadioGroup
        android:id="@+id/radioSpeedSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/joyStickView">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/ten"
            android:id="@+id/radioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty"
            android:id="@+id/radioButton2"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirty"
            android:id="@+id/radioButton3"
            android:checked="false" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourty"
            android:id="@+id/radioButton4"
            android:checked="false" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifty"
            android:id="@+id/radioButton5"
            android:checked="false" />

    </RadioGroup>


</RelativeLayout>